add endpoints for sprint 6
