# src/routes/courses.go
@@ -21,8 +21,21 @@ func (r Routes) AddCoursesRoutes(dbUrl string) error {
 	if err != nil {
 		return err
 	}
+	commentsDb, err := db.CreateDB[services.Comments]("commentsTable", dbUrl)
+	if err != nil {
+		return err
+	}
+	groupsDb, err := db.CreateDB[services.GroupDto]("groupsTable", dbUrl)
+	if err != nil {
+		return err
+	}
+	rateDb, err := db.CreateDBWithIndex[services.Rate]("rateTable", dbUrl)
+	if err != nil {
+		return err
+	}
 	validator := middleware.CreateValidator[controller.UserRequest](os.Getenv(secretValidator))
-	c := controller.CreateControllerCourse(services.CreateCourseService(courseDb, classDb), validator, services.CreateSubscriptionService(subscriptionDb))
+
+	c := controller.CreateControllerCourse(services.CreateCourseService(courseDb, classDb), validator, services.CreateSubscriptionService(subscriptionDb), services.CreateCommentsService(commentsDb), services.CreateGroupsService(groupsDb), services.CreateRateService(rateDb))
 	courseGroup := r.Router.Group("/course")
 	courseGroup.POST("/", validator.SetTokenDataInContext, c.CreateCourse)
 	courseGroup.POST("/:id", c.AddClass)
@@ -35,5 +48,14 @@ func (r Routes) AddCoursesRoutes(dbUrl string) error {
 	subsGroup.POST("/:id", validator.SetTokenDataInContext, c.Subscribe)
 	subsGroup.GET("/", validator.SetTokenDataInContext, c.GetSubscribed)
 	subsGroup.GET("/courses/:id", c.GetAllSubscribed)
+	commentsGroup := courseGroup.Group("/comments")
+	commentsGroup.GET("/:courseId", c.GetComment)
+	commentsGroup.POST("/", validator.SetTokenDataInContext, c.AddComment)
+	groupsGroup := courseGroup.Group("/group")
+	groupsGroup.GET("/", validator.SetTokenDataInContext, c.GetGroup)
+	groupsGroup.POST("/add/:userId", validator.SetTokenDataInContext, c.AddToGroup)
+	rateGroup := courseGroup.Group("/rate")
+	rateGroup.POST("/add", validator.SetTokenDataInContext, c.AddRate)
+	rateGroup.GET("/:courseId", c.GetRate)
 	return nil
 }
